# multisensor-SLAM

./: .gitignore  .gitmodules  README.md
config/kitti/: PYR.json  backend.json  camera.json  feature_management.json
config/kitti/JET/: calib.json  config.json
config/kitti/backend/: kitti00.json  parameters.json  seq00.json
config/milliAmpere/: backend.json  camera.json  camera.yaml  detector.yaml  feature_management.json  sensor_setup.yaml
download/: 01-download-kittidata  README.md  download-kittidata-odometry
installation/: .gitignore  00-install-basics  02-install-eigen  04-build-opencv  05-install-geographiclib  06-install-gtsam  07-install-melodic  08-install-kitti2bag  09-install-ceres  LICENSE  README.md  run-complete-setup
results/: .gitignore  eval_cfg.yaml
setup/: 00-install-basics  01-install-newer-cmake  03-install-sophus  04-build-opencv  06-install-gtsam  07-install-melodic  09-install-opengv  clion_code_style.xml  uncompress_vocabulary.sh
setup/download/: download-kittidata-00-full
setup/installation/: 01-install-cmake  03-install-sophus  04-build-opencv  06-install-gtsam  07-install-ros  08-install-kitti2bag  10-install-dloopdetector_dependencies  11-install-JET  README.md  run-complete-setup
src/backend/: CMakeLists.txt  package.xml
src/custom_msgs/: CMakeLists.txt  setup.py  topics.md
src/stereo_frontend/: CMakeLists.txt  package.xml
src/viewer/: CMakeLists.txt  package.xml
src/vo/: CMakeLists.txt  package.xml
utils/: plot_vo_txt.py
vocabulary/: .gitignore
vocabulary/convert/: CMakeLists.txt  convert_txt2bin.cc
(+309 files in other folders)
